# gbf-beautify-honors

./: .gitlint  .pre-commit-config.yaml  GBF_Beautify_Honor.ipynb  Makefile  README.md  README.zh-tw.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  main.yml  release.yml  update-markdown-toc.yaml
example_configs/: config.zh-tw.json
gbf_beautify_guild_war_honors/: main.py  solver.py
gbf_beautify_honors/: action.py  config.json  main.py  solver.py
tests/: test_gbf_beautify_guild_war_honors.py  test_gbf_beautify_honors.py
